Funciona el carrusel

--- a/index.html
+++ b/index.html
@@ -31,37 +31,67 @@
         </div>
     </header>
     <main>
-        <div id="conteItemsCarrusel">
-            <div class="itemCarrusel" id="intemCarrusel-1">
+        <section id="conteItemsCarrusel">
+            <article class="itemCarrusel" id="itemCarrusel-1">
                 <div class="tarjetaCarrusel" id="tarjetaCarrusel-1">
-                    A
+                    <img src="./src/HeaderA.png" alt="Straps">
                 </div>
                 <div class="flechasCarrusel">
-                    <i>I</i>
-                    <i>D</i>
+                    <a href="#itemCarrusel-3">
+                        <img src="./src/FlechaIzq.png" alt="">
+                    </a>
+                    <a href="#itemCarrusel-2">
+                        <img src="./src/FlechaDer.png" alt="">
+                    </a>
                 </div>
-            </div>
+            </article>
 
-            <div class="itemCarrusel" id="intemCarrusel-2">
+            <article class="itemCarrusel" id="itemCarrusel-2">
                 <div class="tarjetaCarrusel" id="tarjetaCarrusel-2">
-                    B
+                    <img src="./src/HeaderB.png" alt="Gargantillas">
                 </div>
                 <div class="flechasCarrusel">
-                    <i>I</i>
-                    <i>D</i>
+                    <a href="#itemCarrusel-1">
+                        <img src="./src/FlechaIzq.png" alt="">
+                    </a>
+                    <a href="#itemCarrusel-3">
+                        <img src="./src/FlechaDer.png" alt="">
+                    </a>
                 </div>
-            </div>
+            </article>
 
-            <div class="itemCarrusel" id="intemCarrusel-3">
+            <article class="itemCarrusel" id="itemCarrusel-3">
                 <div class="tarjetaCarrusel" id="tarjetaCarrusel-3">
-                    C
+                    <img src="./src/HeaderC.png" alt="Anillos">
                 </div>
                 <div class="flechasCarrusel">
-                    <i>I</i>
-                    <i>D</i>
+                    <a href="#itemCarrusel-2">
+                        <img src="./src/FlechaIzq.png" alt="">
+                    </a>
+                    <a href="#itemCarrusel-1">
+                        <img src="./src/FlechaDer.png" alt="">
+                    </a>
                 </div>
-            </div>
+            </article>
+        </section>
+        <div id="contePuntos">
+            <a href="#itemCarrusel-1"><img src="./src/punto.png" alt="" class="punto1"></a>
+            <a href="#itemCarrusel-2"><img src="./src/punto.png" alt="" class="punto2"></a>
+            <a href="#itemCarrusel-3"><img src="./src/punto.png" alt="" class="punto3"></a>
         </div>
+
+        <section>
+            <article>
+                <img src="./src/porcelana.png" alt="Sección anillos de porcelana">
+            </article>
+            <article>
+                <img src="./src/mostacilla.png" alt="Sección collares mostacilla">
+            </article>
+            <article>
+                <img src="./src/straps.png" alt="Sección straps">
+            </article>
+
+        </section>
 
     </main>
     <footer>
