Funciona siguiente seccion

--- a/index.html
+++ b/index.html
@@ -80,15 +80,21 @@
             <a href="#itemCarrusel-3"><img src="./src/punto.png" alt="" class="punto3"></a>
         </div>
 
-        <section>
-            <article>
-                <img src="./src/porcelana.png" alt="Sección anillos de porcelana">
+        <section id="seccionACS">
+            <article class="porcelana">
+                <a href="">
+                <img src="./src/porcelana.png" alt="Sección anillos de porcelana" width="100%" height="25%">
+                </a>
             </article>
-            <article>
-                <img src="./src/mostacilla.png" alt="Sección collares mostacilla">
+            <article class="mostacilla">
+                <a href="">
+                <img src="./src/mostacilla.png" alt="Sección collares mostacilla" width="100%" height="30%">
+                </a>
             </article>
-            <article>
-                <img src="./src/straps.png" alt="Sección straps">
+            <article class="straps">
+                <a href="">
+                <img src="./src/straps.png" alt="Sección straps" width="100%" height="35%">
+                </a>
             </article>
 
         </section>
