Crea los inicios de un slider

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         </div>
 
         <section id="seccionACS">
+            <img src="./src/estrellaLilaRosa.png" alt="Estrella animada" class="estrellita">
             <article class="porcelana">
                 <a href="">
                 <img src="./src/porcelana.png" alt="Sección anillos de porcelana" width="100%" height="25%">
@@ -99,6 +100,39 @@
 
         </section>
 
+        <section class="pulseras">
+            <img src="./src/PULSERASH2.png" alt="">
+            <div class="productosPulseras">
+                <article>
+                    <img src="./src/productos/hearts.png" alt="">
+                </article>
+                <article>
+                    <img src="./src/productos/marcela.png" alt="">
+                </article>
+                <article>
+                    <img src="./src/productos/rose-fantasy.png" alt="">
+                </article>
+                <article>
+                    <img src="./src/productos/coral sea.png" alt="">
+                </article>
+            </div>
+        </section>
+        <section class="anillos">
+            <img src="./src/ANILLOSH2.png" alt="">
+            <div>
+                <article>
+                    <img src="./src/productos/daisy.png" alt="">
+                </article>
+            </div>
+        </section>
+        <section class="straps">
+            <img src="./src/STRAPSH2.png" alt="">
+            <div>
+                <article>
+                    <img src="./src/productos/butterfly.png" alt="">
+                </article>
+            </div>
+        </section>
     </main>
     <footer>
         <a><img src="./src/Logo DR.svg" alt="Logo Derechos Reservados" width="327px" height="49.14px"></a>
